# sentinel-relay

./: .env.example  .gitignore  .vercelignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
agents/: README.md  STATUS.md  agent_config.yaml.example  pyproject.toml  run_demo.sh
agents/code_review/: .env.example  README.md  agent.py  main.py  prompt.md
agents/commander/: .env.example  README.md  agent.py  main.py  prompt.md
agents/common/: aimlapi_client.py  aimlapi_enrichment.py  collaboration_api_worker.py  evidence_analysis.py  fixtures.py  interface.py  live_agent.py  schema.py  sentinel_agent_runtime.py  turn_adapter.py
agents/forensics/: .env.example  README.md  agent.py  main.py  prompt.md
agents/live/: run_live_flow.py
agents/mock/: mock_transport.py  run_mock_flow.py  verify_agent_quality.py  verify_aimlapi_enrichment.py  verify_collaboration_api_worker.py  verify_evidence_analysis.py  verify_fixture_generalization.py  verify_turn_adapter.py
agents/remediation/: .env.example  README.md  agent.py  main.py  prompt.md
agents/risk_compliance/: .env.example  README.md  agent.py  main.py  prompt.md
agents/threat_intel/: .env.example  README.md  agent.py  main.py  prompt.md
docs/: 01_BIGGEST_10_FIRST.md  01_PROJECT_VISION_LOCK.md  02_PROJECT_CHARTER.md  03_JUDGE_PITCH_AND_POSITIONING.md  04_PRODUCT_BOUNDARIES_AND_NON_GOALS.md  05_TERMINOLOGY.md  06_DECISION_LOG.md  07_TEAM_ONBOARDING_CHECKLIST.md  08_GITHUB_REPO_AND_BRANCH_RULES.md  09_ISSUES_MILESTONES_AND_LABELS.md  (+56 more)
(+156 files in other folders)
