[project]
name = "sentinel-relay-agents"
version = "0.1.0"
description = "Remote Band/Thenvoi agent workers for Sentinel Relay."
requires-python = ">=3.11"
dependencies = [
  "thenvoi-sdk[langgraph]>=0.3.0",
  "langchain-openai>=0.3.0",
  "langgraph>=0.4.0",
  "python-dotenv>=1.0.1",
]

[tool.uv]
package = false
